// Vitest Snapshot v1

exports[`encodeCurrency 1`] = `
{
  "decimals": 2,
  "minters": null,
  "ticker": "FOO",
}
`;

exports[`encodeCurrency 2`] = `
{
  "data": [
    100,
    117,
    56,
    58,
    100,
    101,
    99,
    105,
    109,
    97,
    108,
    115,
    105,
    50,
    101,
    117,
    55,
    58,
    109,
    105,
    110,
    116,
    101,
    114,
    115,
    110,
    117,
    54,
    58,
    116,
    105,
    99,
    107,
    101,
    114,
    117,
    51,
    58,
    70,
    79,
    79,
    101,
  ],
  "type": "Buffer",
}
`;

exports[`encodeCurrency 3`] = `
{
  "decimals": 0,
  "maximumSupplyMajor": 100n,
  "maximumSupplyMinor": 0n,
  "minters": [
    ArrayBuffer [],
    ArrayBuffer [],
  ],
  "ticker": "BAR",
  "totalSupplyTrackable": true,
}
`;

exports[`encodeCurrency 4`] = `
{
  "data": [
    100,
    117,
    56,
    58,
    100,
    101,
    99,
    105,
    109,
    97,
    108,
    115,
    105,
    48,
    101,
    117,
    49,
    56,
    58,
    109,
    97,
    120,
    105,
    109,
    117,
    109,
    83,
    117,
    112,
    112,
    108,
    121,
    77,
    97,
    106,
    111,
    114,
    105,
    49,
    48,
    48,
    101,
    117,
    49,
    56,
    58,
    109,
    97,
    120,
    105,
    109,
    117,
    109,
    83,
    117,
    112,
    112,
    108,
    121,
    77,
    105,
    110,
    111,
    114,
    105,
    48,
    101,
    117,
    55,
    58,
    109,
    105,
    110,
    116,
    101,
    114,
    115,
    108,
    50,
    48,
    58,
    80,
    3,
    113,
    43,
    99,
    186,
    171,
    152,
    9,
    74,
    214,
    120,
    234,
    43,
    36,
    188,
    228,
    69,
    208,
    118,
    50,
    48,
    58,
    214,
    214,
    57,
    218,
    90,
    88,
    167,
    138,
    86,
    76,
    44,
    211,
    219,
    85,
    250,
    124,
    235,
    226,
    68,
    169,
    101,
    117,
    54,
    58,
    116,
    105,
    99,
    107,
    101,
    114,
    117,
    51,
    58,
    66,
    65,
    82,
    117,
    50,
    48,
    58,
    116,
    111,
    116,
    97,
    108,
    83,
    117,
    112,
    112,
    108,
    121,
    84,
    114,
    97,
    99,
    107,
    97,
    98,
    108,
    101,
    116,
    101,
  ],
  "type": "Buffer",
}
`;

exports[`getCurrencyHash 1`] = `"81446cd346c1be9e686835742bfd3772194dea21"`;

exports[`getCurrencyHash 2`] = `"42ce3a098fe14084e89d3d4449f56126693aeed1"`;

exports[`getCurrencyHash 3`] = `"801990ea2885bd51eebca0e826cc0e27f0917a9b"`;

exports[`getCurrencyHash 4`] = `"da42781871890f1e1b7d6f49c7f2733d3ba7b8bd"`;

exports[`getCurrencyHash 5`] = `"d7fe111cae5b2503939c9bce864ca3b64d575e8d"`;

exports[`getCurrencyHash 6`] = `"38bd85ea71c09ca7ed82b61fe91bc205101db191"`;
